--- a/templates/forecaster.html
+++ b/templates/forecaster.html
@@ -24,7 +24,7 @@
    <!-- Stylesheets -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
-    <link href="{{url_for('static', filename='styles/product_page.css')}}" rel="stylesheet"> 
+    <link href="static/styles/product_page.css" rel="stylesheet"> 
     
     <!-- Scripts -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.slim.js"></script>    
@@ -58,8 +58,8 @@
             
             <h1 class='headline'>Upload data. Generate Forecast. </h1>
             <h4 class='subheading'>In 3 simple steps, automate the creation of a time series forecast. <br/> No data from your csv is stored on our servers.</h4>            
-            <a class='primary-cta' data-element='primary' href="#">Build a Forecast Now</a>
-            <img id='hero-image' src="{{url_for('static', filename='img/app.png')}}"/>
+            <a class='primary-cta' data-element='primary' href="app/">Build a Forecast Now</a>
+            <img id='hero-image' src="static/img/app.png"/>
             
             
         </div>
@@ -76,9 +76,9 @@
             
             <ul id='three-easy-steps'>
             
-                <li><img class='three-steps-icon' id='step1' src="{{url_for('static', filename='img/csv_icon_blue.png')}}"/><h4>Upload Your CSV</h4><p>Choose a csv with 2 columns containing a date and a metric. Then click upload.</p></li>
-                <li><img class='three-steps-icon' id='step2' src="{{url_for('static', filename='img/settings_icon_blue.png')}}"/><h4>Build Basic Forecast</h4><p>Choose how long to forecast and the type of forecasting model.</p></li>
-                <li><img class='three-steps-icon' id='step3' src="{{url_for('static', filename='img/forecast_icon.png')}}"/><h4>Tweak Forecast w/ Advanced Filters</h4><p>After you've generated your forecast, tweak it with a variety of advanced filters.</p></li>
+                <li><img class='three-steps-icon' id='step1' src="static/img/csv_icon_blue.png"/><h4>Upload Your CSV</h4><p>Choose a csv with 2 columns containing a date and a metric. Then click upload.</p></li>
+                <li><img class='three-steps-icon' id='step2' src="static/img/settings_icon_blue.png"/><h4>Build Basic Forecast</h4><p>Choose how long to forecast and the type of forecasting model.</p></li>
+                <li><img class='three-steps-icon' id='step3' src="static/img/forecast_icon.png"/><h4>Tweak Forecast w/ Advanced Filters</h4><p>After you've generated your forecast, tweak it with a variety of advanced filters.</p></li>
 
             </ul>
 
@@ -109,7 +109,7 @@
                     
                     <div id="builtwithopensource" class="tab-pane fade in active">
 
-                        <img id='open-source-icon' src="{{url_for('static', filename='img/heart_opensource_tech.png')}}"/>
+                        <img id='open-source-icon' src="static/img/heart_opensource_tech.png"/>
                        
                         <div class='features-copy'>    
                             <h4 class='features-title'>Built with Open Source</h4>
@@ -120,7 +120,7 @@
 
                     <div id="private" class="tab-pane fade in">
 
-                        <img id='privacy-mask' src="{{url_for('static', filename='img/mask.png')}}"/>
+                        <img id='privacy-mask' src="static/img/mask.png"/>
 
                         <div class='features-copy'>    
                             <h4 class='features-title'>Private</h4>
@@ -131,7 +131,7 @@
 
                     <div id="export" class="tab-pane fade in">
 
-                        <img id='export-forecast' src="{{url_for('static', filename='img/export_data.png')}}"/>
+                        <img id='export-forecast' src="static/img/export_data.png"/>
                         <div class='features-copy'>    
                             <h4 class='features-title'>Export your Forecast Data</h4>
                             <p class='features-description'>Easily export your forecast by using the 'Download' CTA shown above.</p>
@@ -141,7 +141,7 @@
 
                     <div id="prophet" class="tab-pane fade in">
 
-                        <img id='fb-prophet-icon' src="{{url_for('static', filename='img/facebook_prophet_icon.png')}}"/>
+                        <img id='fb-prophet-icon' src="static/img/facebook_prophet_icon.png"/>
                         <div class='features-copy'>    
                             <h4 class='features-title'>Powered by Facebook Prophet</h4>
                             <p class='features-description'>Thanks to the amazing work done by the Facebook Open Source team, forecaster incorporates most of the hyperparameters as filters. Check out the real library in python: pip install fbprophet </p>
@@ -173,7 +173,7 @@
         
             <h2>Ready to Forecast?</h2> 
 
-            <p>All Set? <a data-element='internal-link' data-val='Link: Build your forecast now' href="/app/">Build your forecast now</a>. Need a csv to test it out? Here are a few sample csvs to get you started. </p> 
+            <p>All Set? <a data-element='internal-link' data-val='Link: Build your forecast now' href="app/">Build your forecast now</a>. Need a csv to test it out? Here are a few sample csvs to get you started. </p> 
 
             <table id='sample-csvs' class='table'>
                 <thead>
@@ -184,26 +184,26 @@
                 </thead>
 
                     <tr>
-                        <td><a data-element='download-csv' data-val='Shampoo Sales CSV' href="{{url_for('static', filename='sampledata/shampoo_sales.csv')}}"><img class='download-csv-icon' src="{{url_for('static', filename='img/download_arrow.png')}}"/></a></td>
+                        <td><a data-element='download-csv' data-val='Shampoo Sales CSV' href="static/sampledata/shampoo_sales.csv"><img class='download-csv-icon' src="static/img/download_arrow.png"/></a></td>
                         <td>Shampoo Sales</td>
                         <td>Monthly</td>
 
                     </tr>
                     <tr>
-                        <td><a data-element='download-csv' data-val='Saugeen River Temps CSV' href="{{url_for('static', filename='sampledata/mean_temps.csv')}}"><img class='download-csv-icon' src="{{url_for('static', filename='img/download_arrow.png')}}"/></a></td>
+                        <td><a data-element='download-csv' data-val='Saugeen River Temps CSV' href="static/sampledata/mean_temps.csv"><img class='download-csv-icon' src="static/img/download_arrow.png"/></a></td>
                         <td>Saugeen River Temps</td>
                         <td>Daily</td>
 
                     </tr>
                     <tr>
-                        <td><a data-element='download-csv' data-val='Manning Wikipedia Log Scale PVs CSV' href="{{url_for('static', filename='sampledata/example_wp_log_peyton_manning_v2.csv')}}"><img class='download-csv-icon' src="{{url_for('static', filename='img/download_arrow.png')}}"/></a></td>
+                        <td><a data-element='download-csv' data-val='Manning Wikipedia Log Scale PVs CSV' href="static/sampledata/example_wp_log_peyton_manning_v2.csv"><img class='download-csv-icon' src="static/img/download_arrow.png"/></a></td>
                         <td>Manning Wikipedia Log Scale PVs</td>
                         <td>Daily</td>
 
                     </tr>       
             </table>
             
-            <img id='forecast-fun-graphic' src="{{url_for('static', filename='img/forecast_fun.png')}}"/>
+            <img id='forecast-fun-graphic' src="static/img/forecast_fun.png"/>
 
         </section>
     </div>
