updated katonic logo

--- a/templates/build-forecast-v3.html
+++ b/templates/build-forecast-v3.html
@@ -58,13 +58,13 @@
 
 
                 <a data-element='outbound-cta' data-val='Katonic.ai' href="https://katonic.ai/">
-                <img src="https://katonic.ai/assets/svg/logos/logo-katonic.png" alt="" style="position: absolute; top: 0; right: 0; border: 0; background-color:white; width:200px; height:42px; margin-right: 20px; margin-top: 10px;">
+                <img src="{{app_route}}img/logo.png" alt="" style="position: absolute; top: 0; right: 0; border: 0; background-color:white; width:200px; height:42px; margin-right: 20px; margin-top: 10px;">
                 </a>
 
 
                 <nav>
                     <ul class="nav-bar">
-                        <li><a class='nav-link aboutapp' href="/">about app</a></li>
+                        <li><a class='nav-link aboutapp' href="{{app_route}}">about app</a></li>
                     </ul>
                 </nav>
 
