--- a/templates/forecaster.html
+++ b/templates/forecaster.html
@@ -47,10 +47,10 @@
         
         <div class="header">
             <h3 class="text-muted">forecaster</h3>
-            <a data-element='outbound-cta' data-val='Katonic.ai' href="https://katonic.ai/"><img style="position: absolute; top: 0; right: 0; border: 0; background-color:white; width:200px; height:42px; margin-top: 10px; margin-right: 20px;" src="https://katonic.ai/assets/svg/logos/logo-katonic.png" alt="Katonic Logo"></a>
+            <a data-element='outbound-cta' data-val='Katonic.ai' href="https://katonic.ai/"><img style="position: absolute; top: 0; right: 0; border: 0; background-color:white; width:200px; height:42px; margin-top: 10px; margin-right: 20px;" src="img/logo.png" alt="Katonic Logo"></a>
             <nav>
                 <ul class="nav-bar">
-                    <li><a class='nav-link' href="/">about app</a></li>  
+                    <li><a class='nav-link' href="">about app</a></li>  
                 </ul>
             </nav>  
         </div>
@@ -162,7 +162,7 @@
             <h2>Forecast Use Cases</h2> 
             <p>Maybe you want measure the incremental installs of an app from a recent marketing campaign? Or forecast out where your market share is heading? Forecaster can help with that and more. </p>
             <br/>    
-            <button id='get-started-cta' class='secondary-cta' onclick="location.href='/app'">Get Started</button>
+            <button id='get-started-cta' class='secondary-cta' onclick="location.href='app/'">Get Started</button>
 
         </section>
 
